# BetterVariant

./: .gitignore  CMakeLists.txt  README.md
experiment/: Makefile  contains_argument.cpp  crtp.cpp  lambda_with_n_args.cpp  left_oper.cpp  make_indices.cpp
include/containers/: template_union.h  test_template_union.h  test_variable_vector.h  unique_tuple.h  variable_vector.h
include/mpl/: function_traits.h  functional.h  list.h  list_traits.h  map.h  pair.h  template_union.h  test_function_traits.h  test_functional.h  test_list_traits.h  test_map.h  test_unary_function_traits.h  test_util.h  tuple.h  types.h  unary_function_traits.h  util.h
include/sidney3/: functor.h  guarded_return.h  operators.h  tags.h  test_functor.h  test_variant.h  test_visit.h  variant.h  visit.h  xvariant.h
src/: main.cpp  test.cpp  variant_demo.cpp
src/containers/: test_template_union.cpp  test_unique_tuple.cpp  test_variable_vector.cpp
src/sidney3/: test_functor.cpp  test_variant.cpp  test_visit.cpp
